--- a/CardGameApp/CardGameApp/Base.lproj/Main.storyboard
+++ b/CardGameApp/CardGameApp/Base.lproj/Main.storyboard
@@ -7,7 +7,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,113 +19,100 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z9S-y3-dlr" customClass="CardDummyView" customModule="CardGameApp" customModuleProvider="target">
-                                <rect key="frame" x="3" y="23" width="209" height="66.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="GWl-Jv-Kdf" customClass="CardDummyView" customModule="CardGameApp" customModuleProvider="target">
+                                <rect key="frame" x="3" y="20" width="209.5" height="63.5"/>
                                 <subviews>
-                                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="3Ho-XI-pH6" customClass="EmptyCardView" customModule="CardGameApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="66.5"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZhL-K2-I0z" customClass="EmptyCardView" customModule="CardGameApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="63.5"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="ZhL-K2-I0z" secondAttribute="height" multiplier="1:1.27" id="vKr-F2-0ye"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5aE-Xm-Kh6" customClass="EmptyCardView" customModule="CardGameApp" customModuleProvider="target">
+                                        <rect key="frame" x="53" y="0.0" width="50.5" height="63.5"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
-                                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="G5q-8i-y8H" customClass="EmptyCardView" customModule="CardGameApp" customModuleProvider="target">
-                                        <rect key="frame" x="53" y="0.0" width="51" height="66.5"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9IU-1X-5LG" customClass="EmptyCardView" customModule="CardGameApp" customModuleProvider="target">
+                                        <rect key="frame" x="106.5" y="0.0" width="50" height="63.5"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
-                                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="9Ys-pj-QXy" customClass="EmptyCardView" customModule="CardGameApp" customModuleProvider="target">
-                                        <rect key="frame" x="107" y="0.0" width="50" height="66.5"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                    </view>
-                                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="s0e-wf-et1" customClass="EmptyCardView" customModule="CardGameApp" customModuleProvider="target">
-                                        <rect key="frame" x="160" y="0.0" width="50" height="66.5"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UhZ-lb-u2a" customClass="EmptyCardView" customModule="CardGameApp" customModuleProvider="target">
+                                        <rect key="frame" x="159.5" y="0.0" width="50" height="63.5"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="9Ys-pj-QXy" firstAttribute="top" secondItem="z9S-y3-dlr" secondAttribute="top" id="2b9-hR-qcV"/>
-                                    <constraint firstItem="9Ys-pj-QXy" firstAttribute="width" secondItem="3Ho-XI-pH6" secondAttribute="width" id="D4R-Vv-quQ"/>
-                                    <constraint firstItem="9Ys-pj-QXy" firstAttribute="leading" secondItem="G5q-8i-y8H" secondAttribute="trailing" constant="3" id="FZa-nk-Ht3"/>
-                                    <constraint firstItem="s0e-wf-et1" firstAttribute="height" secondItem="3Ho-XI-pH6" secondAttribute="height" id="GcP-CO-Qn3"/>
-                                    <constraint firstItem="3Ho-XI-pH6" firstAttribute="top" secondItem="z9S-y3-dlr" secondAttribute="top" id="KQe-XS-NOz"/>
-                                    <constraint firstAttribute="bottom" secondItem="3Ho-XI-pH6" secondAttribute="bottom" id="Sd3-WZ-RT3"/>
-                                    <constraint firstItem="s0e-wf-et1" firstAttribute="top" secondItem="z9S-y3-dlr" secondAttribute="top" id="V6B-7W-lp1"/>
-                                    <constraint firstItem="9Ys-pj-QXy" firstAttribute="trailing" secondItem="s0e-wf-et1" secondAttribute="leading" constant="-3" id="aR4-bB-cJp"/>
-                                    <constraint firstItem="3Ho-XI-pH6" firstAttribute="leading" secondItem="z9S-y3-dlr" secondAttribute="leading" id="aZE-2L-LLQ"/>
-                                    <constraint firstItem="G5q-8i-y8H" firstAttribute="width" secondItem="3Ho-XI-pH6" secondAttribute="width" id="e2P-p0-2jz"/>
-                                    <constraint firstItem="G5q-8i-y8H" firstAttribute="top" secondItem="z9S-y3-dlr" secondAttribute="top" id="j6p-HO-I2j"/>
-                                    <constraint firstItem="3Ho-XI-pH6" firstAttribute="height" secondItem="z9S-y3-dlr" secondAttribute="height" id="m4E-DW-wX1"/>
-                                    <constraint firstItem="G5q-8i-y8H" firstAttribute="leading" secondItem="3Ho-XI-pH6" secondAttribute="trailing" constant="3" id="rp8-GR-6H0"/>
-                                    <constraint firstItem="G5q-8i-y8H" firstAttribute="height" secondItem="3Ho-XI-pH6" secondAttribute="height" id="tgc-ao-Shh"/>
-                                    <constraint firstItem="s0e-wf-et1" firstAttribute="width" secondItem="3Ho-XI-pH6" secondAttribute="width" id="uBd-bL-Lzk"/>
-                                    <constraint firstItem="9Ys-pj-QXy" firstAttribute="height" secondItem="3Ho-XI-pH6" secondAttribute="height" id="wCy-Ze-SMP"/>
-                                    <constraint firstAttribute="width" secondItem="z9S-y3-dlr" secondAttribute="height" multiplier="4:1.27" id="zi0-w7-wmN"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LNd-Bh-3Lq">
-                                <rect key="frame" x="242" y="23" width="51" height="66.5"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
+                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="jIU-P4-hls" customClass="CardStackDummyView" customModule="CardGameApp" customModuleProvider="target">
-                                <rect key="frame" x="3" y="96.5" width="369" height="570.5"/>
+                                <rect key="frame" x="3" y="91" width="369" height="576"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q1N-lF-j1g" customClass="CardStackView" customModule="CardGameApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="570.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="576"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1k6-iG-qh1" customClass="CardStackView" customModule="CardGameApp" customModuleProvider="target">
-                                        <rect key="frame" x="53" y="0.0" width="50.5" height="570.5"/>
+                                        <rect key="frame" x="53" y="0.0" width="50.5" height="576"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sc3-aC-U3d" customClass="CardStackView" customModule="CardGameApp" customModuleProvider="target">
-                                        <rect key="frame" x="106.5" y="0.0" width="50" height="570.5"/>
+                                        <rect key="frame" x="106.5" y="0.0" width="50" height="576"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5s3-ba-IMB" customClass="CardStackView" customModule="CardGameApp" customModuleProvider="target">
-                                        <rect key="frame" x="159.5" y="0.0" width="50" height="570.5"/>
+                                        <rect key="frame" x="159.5" y="0.0" width="50" height="576"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aP8-g9-Fns" customClass="CardStackView" customModule="CardGameApp" customModuleProvider="target">
-                                        <rect key="frame" x="212.5" y="0.0" width="50" height="570.5"/>
+                                        <rect key="frame" x="212.5" y="0.0" width="50" height="576"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vBo-kA-FbL" customClass="CardStackView" customModule="CardGameApp" customModuleProvider="target">
-                                        <rect key="frame" x="265.5" y="0.0" width="50.5" height="570.5"/>
+                                        <rect key="frame" x="265.5" y="0.0" width="50.5" height="576"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DTV-is-lkV" customClass="CardStackView" customModule="CardGameApp" customModuleProvider="target">
-                                        <rect key="frame" x="319" y="0.0" width="50" height="570.5"/>
+                                        <rect key="frame" x="319" y="0.0" width="50" height="576"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LNd-Bh-3Lq">
+                                <rect key="frame" x="238" y="20" width="50" height="63.5"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="LNd-Bh-3Lq" secondAttribute="height" multiplier="1:1.27" id="y9F-fR-SpJ"/>
+                                </constraints>
+                            </view>
                             <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ghi-hx-KIJ">
-                                <rect key="frame" x="322" y="23" width="50" height="66.5"/>
+                                <rect key="frame" x="321.5" y="20" width="50.5" height="63.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ghi-hx-KIJ" secondAttribute="height" multiplier="1:1.27" id="Idy-fY-N1z"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="jIU-P4-hls" firstAttribute="top" secondItem="z9S-y3-dlr" secondAttribute="bottom" constant="7.5" id="CNe-Ho-Czv"/>
-                            <constraint firstItem="LNd-Bh-3Lq" firstAttribute="top" secondItem="z9S-y3-dlr" secondAttribute="top" id="FHA-kz-82M"/>
+                            <constraint firstItem="jIU-P4-hls" firstAttribute="top" secondItem="GWl-Jv-Kdf" secondAttribute="bottom" constant="7.5" id="4ee-hG-AHd"/>
+                            <constraint firstItem="LNd-Bh-3Lq" firstAttribute="top" secondItem="GWl-Jv-Kdf" secondAttribute="top" id="5Ea-7K-reB"/>
+                            <constraint firstItem="LNd-Bh-3Lq" firstAttribute="leading" secondItem="GWl-Jv-Kdf" secondAttribute="trailing" constant="25.5" id="6hj-QM-vpE"/>
+                            <constraint firstItem="ghi-hx-KIJ" firstAttribute="top" secondItem="LNd-Bh-3Lq" secondAttribute="top" id="9e0-hK-YzQ"/>
+                            <constraint firstItem="ghi-hx-KIJ" firstAttribute="height" secondItem="LNd-Bh-3Lq" secondAttribute="height" id="Dhh-5Y-llX"/>
                             <constraint firstItem="6Nh-a6-VQj" firstAttribute="trailing" secondItem="ghi-hx-KIJ" secondAttribute="trailing" constant="3" id="FSl-kj-e0s"/>
-                            <constraint firstItem="z9S-y3-dlr" firstAttribute="top" secondItem="6Nh-a6-VQj" secondAttribute="top" constant="3" id="FUI-V7-Ugj"/>
-                            <constraint firstItem="LNd-Bh-3Lq" firstAttribute="height" secondItem="z9S-y3-dlr" secondAttribute="height" id="LCp-4m-QJo"/>
-                            <constraint firstItem="ghi-hx-KIJ" firstAttribute="width" secondItem="LNd-Bh-3Lq" secondAttribute="width" id="TJ1-Gs-F5R"/>
                             <constraint firstItem="6Nh-a6-VQj" firstAttribute="bottom" secondItem="jIU-P4-hls" secondAttribute="bottom" id="UBi-4n-WPb"/>
-                            <constraint firstItem="ghi-hx-KIJ" firstAttribute="top" secondItem="LNd-Bh-3Lq" secondAttribute="top" id="bC8-dp-OxC"/>
                             <constraint firstItem="6Nh-a6-VQj" firstAttribute="trailing" secondItem="jIU-P4-hls" secondAttribute="trailing" constant="3" id="dgh-Ij-7UJ"/>
                             <constraint firstItem="jIU-P4-hls" firstAttribute="leading" secondItem="6Nh-a6-VQj" secondAttribute="leading" constant="3" id="eST-Ax-Ku9"/>
-                            <constraint firstItem="z9S-y3-dlr" firstAttribute="leading" secondItem="6Nh-a6-VQj" secondAttribute="leading" constant="3" id="mMX-Qs-M2L"/>
-                            <constraint firstItem="ghi-hx-KIJ" firstAttribute="height" secondItem="LNd-Bh-3Lq" secondAttribute="height" id="oXO-75-Phq"/>
-                            <constraint firstItem="3Ho-XI-pH6" firstAttribute="width" secondItem="Q1N-lF-j1g" secondAttribute="width" id="qf6-lv-qIA"/>
-                            <constraint firstItem="z9S-y3-dlr" firstAttribute="width" secondItem="xSj-e9-vaD" secondAttribute="width" multiplier="1:1.8" id="tCb-yj-4pD"/>
-                            <constraint firstItem="LNd-Bh-3Lq" firstAttribute="width" secondItem="3Ho-XI-pH6" secondAttribute="width" id="tXr-vc-G6z"/>
-                            <constraint firstItem="ghi-hx-KIJ" firstAttribute="leading" secondItem="LNd-Bh-3Lq" secondAttribute="trailing" constant="29.5" id="uEa-Q7-VWF"/>
+                            <constraint firstItem="GWl-Jv-Kdf" firstAttribute="trailing" secondItem="5s3-ba-IMB" secondAttribute="trailing" id="fZW-6e-WCh"/>
+                            <constraint firstItem="6Nh-a6-VQj" firstAttribute="top" secondItem="GWl-Jv-Kdf" secondAttribute="top" id="fwB-WG-9cA"/>
+                            <constraint firstItem="6Nh-a6-VQj" firstAttribute="trailing" secondItem="ghi-hx-KIJ" secondAttribute="trailing" constant="3" id="hgI-xW-Voi"/>
+                            <constraint firstItem="LNd-Bh-3Lq" firstAttribute="height" secondItem="GWl-Jv-Kdf" secondAttribute="height" id="hup-LG-yd2"/>
+                            <constraint firstItem="GWl-Jv-Kdf" firstAttribute="leading" secondItem="6Nh-a6-VQj" secondAttribute="leading" constant="3" id="qQq-7i-mkU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Nh-a6-VQj"/>
                     </view>
                     <connections>
                         <outlet property="backCardView" destination="ghi-hx-KIJ" id="Kye-fv-sB0"/>
-                        <outlet property="cardDummyView" destination="z9S-y3-dlr" id="wja-Lc-Ar8"/>
+                        <outlet property="cardDummyView" destination="GWl-Jv-Kdf" id="cXd-4n-a1e"/>
                         <outlet property="cardStackDummyView" destination="jIU-P4-hls" id="a89-nf-N1C"/>
                         <outlet property="showCardView" destination="LNd-Bh-3Lq" id="Vdx-U4-JKm"/>
                     </connections>
