--- a/CardGameApp/CardGameApp/Base.lproj/Main.storyboard
+++ b/CardGameApp/CardGameApp/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LNd-Bh-3Lq">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LNd-Bh-3Lq" customClass="ShowCardView" customModule="CardGameApp" customModuleProvider="target">
                                 <rect key="frame" x="238" y="20" width="50" height="63.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -114,7 +114,7 @@
                         <outlet property="backCardView" destination="ghi-hx-KIJ" id="Kye-fv-sB0"/>
                         <outlet property="cardDummyView" destination="GWl-Jv-Kdf" id="cXd-4n-a1e"/>
                         <outlet property="cardStackDummyView" destination="jIU-P4-hls" id="a89-nf-N1C"/>
-                        <outlet property="showCardView" destination="LNd-Bh-3Lq" id="Vdx-U4-JKm"/>
+                        <outlet property="showCardView" destination="LNd-Bh-3Lq" id="tyY-tR-nTP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kMV-SJ-7UR" sceneMemberID="firstResponder"/>
